Update version and template

--- a/web/magazine/home.tmpl
+++ b/web/magazine/home.tmpl
@@ -80,7 +80,7 @@
         <p>
           You need install <a href="http://nodejs.org" target="_blank">node.js (npm)</a> first then running shell:
         </p>
-        <pre style="font-size: 12px;">npm install ourjs && cp -r node_modules/ourjs ./ourjs && chmod 755 ./ourjs/ourjs.sh && ./ourjs/ourjs.sh</pre>
+        <pre style="font-size: 12px;">npm install ourjs && cp -r node_modules/ourjs ./ && chmod 755 ./ourjs/ourjs.sh && ./ourjs/ourjs.sh</pre>
         <p>
           <b>Note:</b> If you are a windows user, please install <a href="http://msysgit.github.io/" target="_blank">mysysgit</a> and running it in "Git Bash" (right click menu).
         </p>
