--- a/web/magazine/home.tmpl
+++ b/web/magazine/home.tmpl
@@ -80,9 +80,13 @@
         <p>
           You need install <a href="http://nodejs.org" target="_blank">node.js (npm)</a> first then running shell:
         </p>
-        <pre style="font-size: 12px;">npm install ourjs && cp -r node_modules/ourjs ./ && chmod 755 ./ourjs/ourjs.sh && ./ourjs/ourjs.sh</pre>
+        <pre style="font-size: 12px;">
+          npm install ourjs<br>
+          cp -r node_modules/ourjs ./<br>
+          chmod 755 ./ourjs/ourjs.sh && ./ourjs/ourjs.sh
+        </pre>
         <p>
-          <b>Note:</b> If you are a windows user, please install <a href="http://msysgit.github.io/" target="_blank">mysysgit</a> and running it in "Git Bash" (right click menu).
+          <b>Note:</b> If you are a <b>windows</b> user, please pre-install <a href="http://msysgit.github.io/" target="_blank">mysysgit</a> and running it in "Git Bash" (right click menu, there maybe some errors on windows ignore first).
         </p>
         <p>Trying at <a href="http://localhost:8054">http://localhost:8054</a> (refresh twice to establish the cache)</p>
       </div>
