--- a/web/magazine/css/prod.css
+++ b/web/magazine/css/prod.css
@@ -833,3 +833,15 @@ user info and avator
   top: 40%;
   left: 40%;
 }
+
+.copyright {
+  color: #333; 
+  font-size: 14px; 
+  font-weight: 400;
+  line-height: 24px;
+  text-align: right;
+}
+
+.copyright a {
+  color: #333; 
+}
