--- a/web/magazine/home.tmpl
+++ b/web/magazine/home.tmpl
@@ -78,7 +78,7 @@
       <div class="large-8 columns">
         <h4 class="title">10 seconds Install</h4>
         <p>
-          You need install <a href="http://nodejs.org" target="_blank">node.js (npm)</a> first then running shell:
+          You need pre-install <a href="http://nodejs.org" target="_blank">node.js (npm)</a> and running shells:
         </p>
         <pre style="font-size: 12px;">
           npm install ourjs<br>
@@ -86,7 +86,7 @@
           chmod 755 ./ourjs/ourjs.sh && ./ourjs/ourjs.sh
         </pre>
         <p>
-          <b>Note:</b> If you are a <b>windows</b> user, please pre-install <a href="http://msysgit.github.io/" target="_blank">mysysgit</a> and running it in "Git Bash" (right click menu, there maybe some errors on windows ignore first).
+          <b>Note:</b> If you are a <b>windows</b> user, please pre-install <a href="http://msysgit.github.io/" target="_blank">mysysgit</a> and running them in "Git Bash" (From right click menu, there maybe some errors like "Failed to locate: CL.exe" which you can ignore).
         </p>
         <p>Trying at <a href="http://localhost:8054">http://localhost:8054</a> (refresh twice to establish the cache)</p>
       </div>
