--- a/web/magazine/home.tmpl
+++ b/web/magazine/home.tmpl
@@ -1,7 +1,7 @@
 <!doctype html>
 <html class="no-js" lang="en">
 <head>
-<title>OurJS | Free Blog, Forum, Website Platform and CMS based on Node.JS</title>
+<title>OurJS | Free Blog Engine, Forum System, Website Template and CMS Platform based on Node.JS</title>
 <!--#include="head.part"-->
 <script>var conf={{=it.conf}}</script>
 </head>
