--- a/web/magazine/userinfo.tmpl
+++ b/web/magazine/userinfo.tmpl
@@ -50,9 +50,15 @@
       </div>
       {{~}}
     </div>
-    <div id="loader" style="display:none">
+  </div>
+</div>
+
+<div class="row">
+  <div class="large-12 columns text-right">
+    <div id="loader" class="hide">
       <pre style="text-align:center">Loading...</pre>
     </div>
+    <a class="button tiny" id="loadmore" href="{{=it.nextPage}}">Load More</a>
   </div>
 </div>
 
