--- a/web/magazine/css/ourjs.css
+++ b/web/magazine/css/ourjs.css
@@ -454,7 +454,7 @@ article
   margin: 0;
   padding: 0;
   text-indent: 4px;
-  vertical-align: text-top;
+  vertical-align: middle;
 }
 
 .toolbar .refresh{
@@ -473,6 +473,11 @@ article
 
 .toolbar button{
   padding: 10px 32px;
+  margin: 0;
+}
+
+.toolbar input{
+  margin: 0;
 }
 
 
