Fix load more link on userinfo.tmpl

--- a/web/magazine/userinfo.tmpl
+++ b/web/magazine/userinfo.tmpl
@@ -58,7 +58,7 @@
     <div id="loader" class="hide">
       <pre style="text-align:center">Loading...</pre>
     </div>
-    <a class="button tiny" id="loadmore" href="{{=it.nextPage}}">Load More</a>
+    <a class="button tiny" id="loadmore" href="/userinfo/{{=it.user.username}}/{{=it.next}}">Load More</a>
   </div>
 </div>
 
