--- a/web/magazine/css/ourjs.css
+++ b/web/magazine/css/ourjs.css
@@ -1,3 +1,4 @@
+/*Powered by OurJS.com*/
 pre {
   color: #fff;
   display: block;
@@ -601,7 +602,6 @@ user info and avator
 
 .copyright {
   color: #333; 
-  font-size: 14px; 
   font-weight: 400;
   line-height: 24px;
   text-align: right;
