Update behavior of publish and delete

--- a/web/magazine/article.tmpl
+++ b/web/magazine/article.tmpl
@@ -38,7 +38,7 @@
       {{?}}
       {{?it.isAdmin}}
       &nbsp;
-      <a href="/root/publish/{{=it._id}}">
+      <a href="/root/publish/{{=it._id}}" target="_blank">
         <i class="fa fa-share-square-o"></i> Publish
       </a>
       {{?}}
