Update share scripts and description

--- a/web/magazine/home.tmpl
+++ b/web/magazine/home.tmpl
@@ -39,10 +39,6 @@
     <span class='st_linkedin_large' displayText='LinkedIn'></span>
     <span class='st_pinterest_large' displayText='Pinterest'></span>
     <span class='st_sina_large' displayText='Sina'></span>
-
-    <script type="text/javascript">var switchTo5x=true;</script>
-    <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
-    <script type="text/javascript">stLight.options({publisher: "d64da7f1-9a98-4c1a-beb7-53ab85f4e5e0", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
     <!-- Share Button: End -->
   </div>
 </header>
@@ -148,6 +144,14 @@
 </div>
 
 <!--#include="foot.part"-->
+
+
+<!-- YOU CAN DELETE THESE CODES -->
+<!--Share Scripts: Begin -->
+<script type="text/javascript">var switchTo5x=true;</script>
+<script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
+<script type="text/javascript">stLight.options({publisher: "d64da7f1-9a98-4c1a-beb7-53ab85f4e5e0", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
+<!--Share Scripts: End -->
 
 </div>
 </div>
