Add post button on forum.tmpl

--- a/web/magazine/forum.tmpl
+++ b/web/magazine/forum.tmpl
@@ -40,7 +40,15 @@
       </li>
       {{~}}
     </ul>
+  </div>
+</div>
+
+<div class="row">
+  <div class="large-8 columns">
     <div class="pagination">{{=it.pagination}}</div>
+  </div>
+  <div class="large-4 columns text-right">
+    <br><a class="button small" href="/root/edit/add">NEW POST</a>
   </div>
 </div>
 
