--- a/admin/data/web/list.tmpl
+++ b/admin/data/web/list.tmpl
@@ -29,6 +29,9 @@
         {{?}}
         {{ } }}
       </ul>
+      <ul class="nav navbar-nav" style="float:right">
+        <li class="active"><a href="/updatecache" target="_blank">Refresh Cache</a></li>
+      </ul>
     </div>
   </div>
 </div>
