--- a/web/magazine/edit.tmpl
+++ b/web/magazine/edit.tmpl
@@ -38,7 +38,7 @@
       <br><br>
 
       <label>Verify
-        <select name="verify" data-val="{{=it.verify || ''}}">
+        <select name="verify" data-val="{{=it.verify || '0'}}">
           <option value="-1">Save Draft</option>
           <option value="0">Save Post</option>
           <option value="1">Publish to Homepage</option>
