--- a/web/magazine/rss.tmpl
+++ b/web/magazine/rss.tmpl
@@ -7,7 +7,7 @@
   {{~ it.articles :article:index }}
   <item>
     <title><![CDATA[{{=article.title}}]]></title>
-    <link>http://code.ourjs.com/article/{{=article._id}}</link>
+    <link>http://code.ourjs.com/article/{{=article.urlSlug || article._id}}</link>
     <description><![CDATA[{{=article.summary}}]]></description>
   </item>
   {{~}}
