Update theme of newspaper

--- a/web/newspaper/css/prod.css
+++ b/web/newspaper/css/prod.css
@@ -1043,6 +1043,7 @@ label.error {
 
 
 #nprogress {
+  display: none;
   pointer-events: none;
   position: relative;
 }
@@ -1057,8 +1058,6 @@ label.error {
 
   width: 100%;
   height: 2px;
-
-  transform: translate3d(-98%, 0px, 0px);
 }
 
 
