--- a/web/newspaper/css/ourjs.css
+++ b/web/newspaper/css/ourjs.css
@@ -999,6 +999,7 @@ label.error {
 
 
 #nprogress {
+  display: none;
   pointer-events: none;
   position: relative;
 }
@@ -1013,8 +1014,6 @@ label.error {
 
   width: 100%;
   height: 2px;
-
-  transform: translate3d(-98%, 0px, 0px);
 }
 
 
