Fix bug: When there is no hottest articles

--- a/web/newspaper/home.tmpl
+++ b/web/newspaper/home.tmpl
@@ -43,6 +43,7 @@
 
     <div class="span4">
       <div id="article-panel">
+        {{?it.hottest && it.hottest.length}}
         <h5>
           <i class="icon-star-empty"></i>
           &nbsp;本月热门 - 点击最多
@@ -55,6 +56,7 @@
           {{~}}
         </ol>
         <br>
+        {{?}}
 
         <h5>
           <i class="icon-star-empty"></i>
