--- a/web/newspaper/home.tmpl
+++ b/web/newspaper/home.tmpl
@@ -82,7 +82,8 @@
         </ul>
         <div style="color:#000;margin: 0 0 20px 24px;">
           <a href="//code.ourjs.com" target="_blank"> <b>Demo (EN)<b></a>,
-          <a href="http://github.com/newghost/ourjs" target="_blank"><b>Github</b></a>
+          <a href="//demo.ourjs.com" target="_blank"> <b>Demo (CN)<b></a>,
+          <a href="//github.com/newghost/ourjs" target="_blank"><b>Github</b></a>
         </div>
 
         <h5>
