--- a/web/newspaper/css/ie7.css
+++ b/web/newspaper/css/ie7.css
@@ -1,3 +1,7 @@
+body{
+  overflow: hidden;
+}
+
 .keywords li {
   float: left;
 }
@@ -10,6 +14,20 @@
   float: left;
   padding: 0 9px;
 }
+
+
+.comments .info {
+  margin-top: -20px;
+}
+
+.comments .info span {
+  margin-top: -20px;
+}
+
+.bbs .comments .content {
+  margin-top: -20px;
+}
+
 
 #nprogress{
   display: none;
