--- a/web/newspaper/bbs_rss.tmpl
+++ b/web/newspaper/bbs_rss.tmpl
@@ -7,7 +7,7 @@
   {{~ it.articles :article:index }}
   <item>
     <title><![CDATA[{{=article.title || ''}}]]></title>
-    <link>http://ourjs.com/detail/{{=article.urlSlug || article._id}}</link>
+    <link>http://ourjs.com/detail/{{=article._id}}</link>
     <description></description>
   </item>
   {{~}}
