Revert url slugs on user detail

--- a/web/newspaper/userinfo.tmpl
+++ b/web/newspaper/userinfo.tmpl
@@ -39,7 +39,7 @@
         {{~ it.list :article:index }}
         <div class="article">
           <h2 class="title">
-            <a target="_blank" href="/detail/{{=article.urlSlug || article._id}}">
+            <a target="_blank" href="/detail/{{=article._id}}">
               {{=article.title}}
             </a>
           </h2>
