Fix bug: auto signin

--- a/web/detail.tmpl
+++ b/web/detail.tmpl
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="{{=it.description}}">
 <!--#include="style.part"-->
-<script>var conf={ _id: "{{=it._id}}", username:"{{=it.username || ''}}", useravatar:"{{=it.useravatar || ''}}"}</script>
+<script>var conf={ _id: "{{=it._id}}", username:"{{=it.user.username || ''}}", useravatar:"{{=it.user.useravatar || ''}}"}</script>
 </head>
 
 <body class="detail">
