--- a/web/edit.tmpl
+++ b/web/edit.tmpl
@@ -12,47 +12,67 @@
 <div class="container">
   <div class="row-fluid">
     <div id="editArticle" class="span12">
-      <h1 class="text-center">编辑文章</h1>
+      <h3 class="text-center">发布文章</h3>
       <br><br>
+
       <form class="form-horizontal" method="post" id="editArticleForm" action="/root/edit.post">
-        <input type="text"  name="_id" readonly="readonly" value="{{=it._id || ''}}" placeholder="编号">
-        <br><br>
+        <input type="hidden"  name="id" readonly="readonly" value="{{=it.article.id || ''}}" placeholder="编号">
         {{? it.user.isAdmin }}
-        <input type="text"  name="poster" readonly="readonly" value="{{=it.poster || ''}}"  placeholder="发布人">
-        <br><br>
-        {{?}}
-        <label>标题</label>
-        <input type="text"  name="title"      value="{{=it.title || ''}}"  placeholder="标题">
-        <br><br>
-        {{? it.user.isAdmin }}
-        <select name="isPublic" data="{{=it.isPublic || ''}}">
-          <option value="0">自己可见</option>
-          <option value="1">推荐首页</option>
-          <option value="1">公开</option>
-        </select>
-        <span>请选择分类</span>
-        <br><br>
-        {{?}}
-
-        <input type="hidden" name="verify" value="{{=it.verify || 0}}" id="verify">
-
-        <label for="summary">原文地址： 原创可不填</label>
-        <input type="url" name="url" value="{{=it.url || ''}}" placeholder="http://">
-        <br><br>
-        <label>文章摘要</label>
-        <textarea rows="10" id="summary" name="summary" placeholder="内容摘要" class="editor"></textarea>
-
-        <hr><br>
-
-        <label for="content">文章正文: 转载内容或讨论贴可不填写正文内容</label>
-        <textarea id="content" rows="24" name="content" placeholder="文章正文" class="editor"></textarea>
-
-        <br><br>
-
-        <div class="text-center">
-          <button type="button" class="btn btn-large btn-success" id="saveDraft">存草稿</button>
-          <button type="submit" class="btn btn-large btn-success">保 存</button>
+        <div class="control-group">
+          <label class="control-label">发布人</label>
+          <div class="controls">
+            <input class="span10" type="text"  name="poster" readonly="readonly" value="{{=it.article.poster || ''}}">
+          </div>
         </div>
+        <br><br>
+        {{?}}
+
+        <div class="control-group">
+          <label class="control-label" for="inputEmail">标题</label>
+          <div class="controls">
+            <input class="span10" type="text"  name="title" value="{{=it.article.title || ''}}">
+          </div>
+        </div>
+
+        <div class="control-group">
+          <label class="control-label" for="inputPassword">链接</label>
+          <div class="controls">
+            <input class="span10" type="url" name="url" value="{{=it.url || ''}}" placeholder="http://">
+          </div>
+        </div>
+
+        {{? it.user.isAdmin }}
+        <div class="control-group">
+          <label class="control-label" for="inputPassword">选项</label>
+          <div class="controls">
+            <select class="span10" name="isPublic" data="{{=it.article.isPublic || ''}}">
+              <option value="0">自己可见</option>
+              <option value="1">推荐首页</option>
+              <option value="1">公开</option>
+            </select>
+          </div>
+        </div>
+        {{?}}
+
+        <div class="controls">
+          <label class="checkbox">
+            <input type="checkbox"> 文章正文: 原创请填写
+          </label>
+        </div>
+
+        <div class="contentWrapper row" style="display:none">
+          <div class="span2"></div>
+          <div class="span8">
+            <textarea id="content" rows="24" name="content" placeholder="文章正文" class="editor" style="width:100%"></textarea>
+          </div>
+        </div>
+
+        <div class="text-center row">
+          <br><br>
+          <button type="submit" class="btn btn-large btn-primary">保 存</button>
+          <br><br>
+        </div>
+
       </form>
     </div>
   </div>
@@ -61,6 +81,8 @@
 var summary={{=JSON.stringify(it.summary)}};
 var content={{=JSON.stringify(it.content)}};
 </script>
+
+<!--#include="footer.part"-->
 
 <!--#include="script.part"-->
 
