--- a/web/edit.tmpl
+++ b/web/edit.tmpl
@@ -37,7 +37,7 @@
         <div class="control-group">
           <label class="control-label" for="inputPassword">链接</label>
           <div class="controls">
-            <input class="span10" type="url" name="url" value="{{=it.url || ''}}" placeholder="http://">
+            <input class="span10" type="url" name="url" value="{{=it.article.url || ''}}" placeholder="http://">
           </div>
         </div>
 
