--- a/web/home.tmpl
+++ b/web/home.tmpl
@@ -2,10 +2,10 @@
 <html lang="zh">
 <head>
 <meta charset="utf-8">
-<title>OurJS {{=it.title}}</title>
+<title>anynb 股市牛博汇</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="keywords" content="OurJS JavaScript Node.JS MongoDB CSS3 Html5 Linux Shell 程序员 码农 技术 脚本 学习 教程 创业 前端 干货 免费 招聘 猎头 IT Ruby Python C# .NET Java C 期刊 周刊 评论 外文 翻译 心得 体会 话题 计算机 发布">
-<meta name="description" content="JSer JavaScript Node.JS MongoDB CSS3 Html5 Linux Shell 程序员 码农 技术 脚本 学习 教程 创业 前端 干货 免费 招聘 猎头 IT Ruby Python C# .NET Java C 期刊 周刊 评论 外文 翻译 心得 体会 话题 计算机 发布">
+<meta name="keywords" content="">
+<meta name="description" content="">
 <!--#include="style.part"-->
 <script>var conf={{=it.conf}}</script>
 </head>
