--- a/web/article.tmpl
+++ b/web/article.tmpl
@@ -2,7 +2,7 @@
 <html lang="zh">
 <head>
 <meta charset="utf-8">
-<title>{{=it.title}} - OurJS</title>
+<title>{{=it.article.title}} | anynb</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="{{=it.description}}">
 <!--#include="style.part"-->
@@ -13,25 +13,25 @@
 <!--#include="header.part"-->
 <div class="container">
   <div class="row-fluid">
-    <div class="span12">
-      <h1>{{=it.article.title}}</h1>
-      <hr>
-      <div class="jiathis_style_24x24">
-        <span>分享到</span>
-        <a class="jiathis_button_qzone"></a>
-        <a class="jiathis_button_tsina"></a>
-        <a class="jiathis_button_tqq"></a>
-        <a class="jiathis_button_weixin"></a>
-        <a class="jiathis_button_renren"></a>
-        <a class="jiathis_button_fb"></a>
-        <a class="jiathis_button_linkedin"></a>
-        <a href="http://www.jiathis.com/share?uid=1862627" class="jiathis jiathis_txt jtico jtico_jiathis" target="_blank"></a>
-      </div>
-    </div>
-  </div>
+    <div class="span2"></div>
 
-  <div class="row-fluid">
-    <div id="article" class="span9">
+    <div id="article" class="span8">
+      <div id="title">
+        <h1>{{=it.article.title}}</h1>
+        <hr>
+        <div class="jiathis_style_24x24">
+          <span>分享到</span>
+          <a class="jiathis_button_qzone"></a>
+          <a class="jiathis_button_tsina"></a>
+          <a class="jiathis_button_tqq"></a>
+          <a class="jiathis_button_weixin"></a>
+          <a class="jiathis_button_renren"></a>
+          <a class="jiathis_button_fb"></a>
+          <a class="jiathis_button_linkedin"></a>
+          <a href="http://www.jiathis.com/share?uid=1862627" class="jiathis jiathis_txt jtico jtico_jiathis" target="_blank"></a>
+        </div>
+      </div>
+
       <div id="summary">
         {{?it.article.keyword}}
         <b>关键字</b>
