--- a/web/home.tmpl
+++ b/web/home.tmpl
@@ -20,7 +20,7 @@
     <div id="article" class="span8">
       <div class="keywords" id='keyNav'>
         <ul class="clearfix">
-          <li><a href="/{{=it.keymeta}}//">2015-01-24</a></li>
+          <li>{{=it.keyword || '最新文章'}}</li>
           <li class="pull-right"><a href="/bbs_rss" target="_blank">RSS</a></li>
         </ul>
       </div>
